--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,6 +17,10 @@
   </head>
 
   <body>
+    <% if user_signed_in? %>
+      <%= render 'layouts/navigation' %>
+    <% end %>
+    <p id='notice'></p>
     <%= yield %>
   </body>
 </html>
