--- a/lib/templates/erb/scaffold/_form.html.erb.tt
+++ b/lib/templates/erb/scaffold/_form.html.erb.tt
@@ -1,18 +1,39 @@
-<%= simple_form_for(<%= model_resource_name %>, html: { class: 'form-horizontal' }) do |f| %>
-  <%= f.error_notification %>
-  <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
-
+<%%= form_with(model: <%= model_resource_name %>) do |form| %>
+  <%% if <%= singular_table_name %>.errors.any? %>
+    <div id="error_explanation">
+      <h2><%%= pluralize(<%= singular_table_name %>.errors.count, "error") %> prohibited this <%= singular_table_name %> from being saved:</h2>
+      <ul>
+        <%% <%= singular_table_name %>.errors.each do |error| %>
+          <li><%%= error.full_message %></li>
+        <%% end %>
+      </ul>
+    </div>
+  <%% end %>
   <% attributes.each do |attribute| -%>
-    <div class="form-inputs">
-      <%= f.label :<%= attribute.column_name %>, class: 'control-label col-sm-2' %>
-      <div class="col-sm-10">
-        <%= f.<%= attribute.field_type %>_field :<%= attribute.column_name %>, class: 'form-control' %>
-      </div>
+    <div class="form-group mb-3">
+      <% if attribute.password_digest? -%>
+          <%%= form.label :password, class: "form-label" %>
+          <%%= form.password_field :password, class:"form-control" %>
+        </div>
+      <div class="form-group mb-3">
+          <%%= form.label :password_confirmation, class: "form-label" %>
+          <%%= form.password_field :password_confirmation, class:"form-control" %>
+      <% elsif attribute.attachments? -%>
+          <%%= form.label :<%= attribute.column_name %>, class: "form-label" %>
+          <%%= form.<%= attribute.field_type %> :<%= attribute.column_name %>, multiple: true %>
+      <% elsif attribute.type == :boolean -%>
+          <%%= form.label :<%= attribute.column_name %>, class: "form-check-label" %>
+          <%%= form.<%= attribute.field_type %> :<%= attribute.column_name %>, class:"form-check-input" %>
+      <% elsif attribute.reference? -%>
+          <%%= form.label :<%= attribute.column_name %> %>
+          <%%= form.collection_select :<%= attribute.column_name %>, <%= attribute.name.camelize %>.all, :id, :name, { prompt: true }, { class: "form-select" }  %>
+      <% else -%>
+          <%%= form.label :<%= attribute.column_name %>, class: "form-label" %>
+          <%%= form.<%= attribute.field_type %> :<%= attribute.column_name %>, class:"form-control" %>
+      <% end -%>
     </div>
   <% end -%>
-  <div class="form-inputs">
-    <div class="col-sm-offset-2 col-sm-10">
-      <%= f.button :submit,'Совершить', class: 'btn btn-primary' %>
-    </div>
+  <div class="form-group mb-3">
+    <%%= form.submit 'Завершить', class: 'btn btn-primary' %>
   </div>
-<% end %>
+<%% end %>
