--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -18,6 +18,8 @@
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
           <%= link_to 'Работники', users_path, class: 'dropdown-item' %>
+          <%= link_to 'переклички', participations_path, class: 'dropdown-item' %>
+          <%= link_to 'добавить новую перекличку', new_participation_path, class: 'dropdown-item' %>
         </div>
       </li>
       <li class="nav-item dropdown">
