--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,5 +1,9 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
+@import "jquery-ui/datepicker";
+@import "jquery-ui";
+@import "jquery-ui/core";
+@import "jquery-ui/theme";
 
 .styled-delete-button{
   background: none;
