--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,6 +19,17 @@
 
     <%# font awesome %>
     <script src="https://kit.fontawesome.com/6ba92b859c.js" crossorigin="anonymous"></script>
+
+    <%# jquery %>
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css">
+    <link rel="stylesheet" href="/resources/demos/style.css">
+    <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+    <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
+    <script>
+    $( function() {
+      $( ".datepicker" ).datepicker();
+    } );
+    </script>
   </head>
 
   <body>
