--- a/app/views/guest_infos/_form.html.erb
+++ b/app/views/guest_infos/_form.html.erb
@@ -1,16 +1,16 @@
-
-<%= simple_form_for(@guest_info) do |f| %>
+<h3>Гость #<%= Booking.find(params[:booking_id]).guest_infos.count + 1 %></h3>
+<%= simple_form_for(guest_info) do |f| %>
   <%= f.error_notification %>
   <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
 
   <div class="form-inputs">
-    <%= f.association :booking %>
-    <%= f.input :name %>
-    <%= f.input :phone_number %>
-    <%= f.input :age %>
+    <%= f.association :booking, as: :hidden %>
+    <%= f.input :name, label: 'Имя' %>
+    <%= f.input :phone_number, label: 'Номер телефона' %>
+    <%= f.input :age, label: 'Возраст' %>
   </div>
 
   <div class="form-actions">
-    <%= f.button :submit %>
+    <%= f.button :submit, 'Оформить' %>
   </div>
 <% end %>
