--- a/app/views/bookings/_form.html.erb
+++ b/app/views/bookings/_form.html.erb
@@ -1,17 +1,17 @@
 
-<%= simple_form_for(@booking) do |f| %>
+<%= simple_form_for(booking) do |f| %>
   <%= f.error_notification %>
   <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
 
   <div class="form-inputs">
-    <%= f.input :number_of_people %>
-    <%= f.input :finished_at %>
-    <%= f.input :breakfast_included %>
-    <%= f.association :home %>
-    <%= f.input :country %>
+    <%= f.input :number_of_people, label: 'Количество гостей' %>
+    <%= f.input :country, label: 'Страна', as: :string %>
+    <%= f.input :finished_at, as: :hidden %>
+    <%= f.input :breakfast_included, label: 'Завтрак включен' %>
+    <%= f.association :home, as: :hidden %>
   </div>
 
   <div class="form-actions">
-    <%= f.button :submit %>
+    <%= f.button :submit, 'Оформить' %>
   </div>
 <% end %>
