--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -10,7 +10,8 @@
         <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
+        <% message = Shift.unclosed.exists? ? 'Закрыть смену' : 'Открыть смену' %>
+        <%= link_to message, toggle_shifts_path, class: 'nav-link', method: :post %>
       </li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -24,10 +25,11 @@
       </li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Dropdown
+          Прочие
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
           <a class="dropdown-item" href="#">Action</a>
+          <%= link_to "" %>
           <a class="dropdown-item" href="#">Another action</a>
           <div class="dropdown-divider"></div>
           <a class="dropdown-item" href="#">Something else here</a>
@@ -41,7 +43,9 @@
   <ul class="text-center navbar-nav ml-auto">
     <% if user_signed_in? %>
       <li class="nav-item ml-auto">
-        <%= link_to "Выйти", destroy_user_session_url, method: :delete, data: { confirm: strip_tags('вы уверены?') }, class: "nav-link styled-delete-button" %>
+        <% if Shift.unclosed.exists? %>
+          <%= link_to "Смена №#{Shift.unclosed.last.id}", shift_path(Shift.unclosed.last) %>
+        <% end %>
       </li>
     <% else %>
       <li class="nav-item">
