--- a/app/views/homes/_homes_by_type.html.erb
+++ b/app/views/homes/_homes_by_type.html.erb
@@ -25,10 +25,12 @@
             <td><%= home.number_of_guests %></td>
             <td><%= active_check home.breakfast_included %></td>
             <td>
-              <%= clink_to 'Посмотреть', home, 'fa-search' %>
+              <%= clink_to 'Посмотреть', home, 'fa-search' %> |
               <% if home.active? %>
-                <%= clink_to 'Закрыть комнату', close_home_path(home), 'fa-person-walking-luggage' %>
-                <%= clink_to 'Показать гостей', guest_infos_url(home_id: home.id), 'fa-user-tie' %>
+                <%= clink_to 'Закрыть комнату', close_home_path(home), 'fa-person-walking-luggage' %> |
+                <%= clink_to 'Показать гостей', guest_infos_url(home_id: home.id), 'fa-user-tie' %> |
+                <%= clink_to 'Оформить оплату', new_top_up_url(home_id: home.id), 'fa-hand-holding-dollar' %> |
+                <%= clink_to 'Показать историю оплат', top_ups_url(home_id: home.id), 'fa-magnifying-glass-dollar' %>
               <% else %>
                 <%= clink_to 'Открыть комнату', new_booking_path(home_id: home.id), 'fa-person-shelter' %>
               <% end %>
