--- a/app/views/homes/_homes_by_type.html.erb
+++ b/app/views/homes/_homes_by_type.html.erb
@@ -11,9 +11,9 @@
     <table class="table table-hover table-striped">
       <thead>
         <tr>
-          <th>Номер</th>
+          <th>ID</th>
           <th>Открыт в</th>
-          <th>Количество гостей</th>
+          <th>Кол. гостей</th>
           <th>Завтрак включон</th>
         </tr>
       </thead>
@@ -24,7 +24,7 @@
             <td><%= strf_datetime home.started_at %></td>
             <td><%= home.number_of_guests %></td>
             <td><%= active_check home.breakfast_included %></td>
-            <td>
+            <td colspan="5">
               <%= clink_to 'Посмотреть', home, 'fa-search' %> |
               <% if home.active? %>
                 <%= clink_to 'Закрыть комнату', close_home_path(home), 'fa-person-walking-luggage' %> |
