--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,6 +30,7 @@
   <body>
     <% if user_signed_in? %>
       <%= render 'layouts/navigation' %>
+      <%= render 'layouts/shortcuts' %>
     <% end %>
     <% flash.each do |msg| %>
       <div class="alert alert-info">
