--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -18,7 +18,7 @@
       </li>
       <li class="nav-item">
         <% message = Shift.unclosed.exists? ? 'Закрыть смену' : 'Открыть смену' %>
-        <%= link_to message, toggle_shifts_path, class: 'nav-link', method: :post %>
+        <%= link_to message, toggle_shifts_path, class: 'nav-link', method: :post, data: {confirm: 'Вы уверены?'} %>
       </li>
     </ul>
   </div>
