everything is ready

--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -14,6 +14,7 @@
           <%= link_to "Расходы", expenditures_url, class: 'dropdown-item' %>
           <%= link_to "Приходы", top_ups_url, class: 'dropdown-item' %>
           <%= link_to "Список всех гостей", guest_infos_url, class: 'dropdown-item' %>
+          <%= link_to "смены", shifts_path, class: 'dropdown-item' %>
         </div>
       </li>
       <li class="nav-item">
