--- a/app/views/top_ups/index.html.erb
+++ b/app/views/top_ups/index.html.erb
@@ -1,29 +1,7 @@
 <div class="container my-5">
   <div class="card shadow">
     <div class="card-body">
-      <table class="table table-hover table-striped">
-        <thead>
-          <tr>
-            <th>Имя</th>
-            <th>Цена<br><%= num_to_usd @all_top_ups.sum(:price) %> </th>
-            <th>Оформлено в</th>
-            <th>Номер комнаты</th>
-            <th>Комментарие</th>
-            <th colspan="3"></th>
-          </tr>
-        </thead>
-        <tbody>
-          <% @top_ups.each do |top_up| %>
-            <tr>
-              <td><%= top_up.booking.guest_infos.first.name %></td>
-              <td><%= num_to_usd top_up.price %></td>
-              <td><%= strf_datetime top_up.created_at %></td>
-              <td><%= top_up.booking.home.number %></td>
-              <td><%= top_up.comment %></td>
-            </tr>
-          <% end %>
-        </tbody>
-      </table>
+      <%= render 'top_ups', top_ups: @top_ups, total_price: @all_top_ups.sum(:price) %>
       <%= paginate @top_ups %>
     </div>
   </div>
