--- a/app/views/top_ups/_top_ups.html.erb
+++ b/app/views/top_ups/_top_ups.html.erb
@@ -4,7 +4,8 @@
     <tr>
       <th>Имя</th>
       <th>Цена<br><%= num_to_usd total_price %> </th>
-      <th>Оформлено в</th>
+      <th>Оплата оформлено в</th>
+      <th>гость пришел в</th>
       <th>Номер комнаты</th>
       <th>Коммент</th>
       <th colspan="3"></th>
@@ -12,13 +13,16 @@
   </thead>
   <tbody>
     <% top_ups.each do |top_up| %>
-      <tr>
-        <td><%= top_up.booking.guest_infos.first.name %></td>
-        <td><%= num_to_usd top_up.price %></td>
-        <td><%= strf_datetime top_up.created_at %></td>
-        <td><%= top_up.booking.home.number %></td>
-        <td><%= top_up.comment %></td>
-      </tr>
+      <% top_up.booking.guest_infos.each do |guest_info| %>
+        <tr>
+          <td><%= guest_info.name %></td>
+          <td><%= top_up.price.to_f / top_up.booking.guest_infos.count %></td>
+          <td><%= strf_datetime top_up.created_at %></td>
+          <td><%= strf_datetime guest_info.created_at %></td>
+          <td><%= top_up.booking.home.number %></td>
+          <td><%= top_up.comment %></td>
+        </tr>
+      <% end %>
     <% end %>
   </tbody>
 </table>
