--- a/app/views/top_ups/_form.html.erb
+++ b/app/views/top_ups/_form.html.erb
@@ -7,6 +7,7 @@
     <%= f.association :booking, as: :hidden %>
     <%= f.input :price, label: 'цена' %>
     <%= f.input :comment, placeholder: 'Не обязательно' %>
+    <%= f.input :created_at, label: 'Дата' %>
   </div>
 
   <div class="form-actions">
