added country to per guest

--- a/app/views/guest_infos/_form.html.erb
+++ b/app/views/guest_infos/_form.html.erb
@@ -6,6 +6,7 @@
   <div class="form-inputs">
     <%= f.association :booking, as: :hidden %>
     <%= f.input :name, label: 'Имя' %>
+    <%= f.input :country, label: 'Страна', as: :string %>
   </div>
 
   <div class="form-actions">
