--- a/app/views/guest_infos/index.html.erb
+++ b/app/views/guest_infos/index.html.erb
@@ -18,7 +18,7 @@
               <td><%= guest_info.name %></td>
               <td><%= guest_info.phone_number %></td>
               <td><%= guest_info.age %></td>
-              <td><%= guest_info.booking.country %></td>
+              <td><%= guest_info.country %></td>
               <td><%= strf_datetime guest_info.created_at %></td>
             </tr>
           <% end %>
