added info abount home

--- a/app/views/homes/_homes_by_type.html.erb
+++ b/app/views/homes/_homes_by_type.html.erb
@@ -27,14 +27,12 @@
             <td><%= active_check home.breakfast_included %></td>
             <td><%= num_to_usd home.total_paid_by_guests %></td>
             <td colspan="5">
+              <%= clink_to 'Посмотреть детально', home, 'fa-search' %> |
               <% if home.active? %>
-                <%= clink_to 'Закрыть комнату', close_home_path(home), 'fa-person-walking-luggage' %> |
-                <%= clink_to 'Показать гостей', guest_infos_url(home_id: home.id), 'fa-user-tie' %> |
                 <%= clink_to 'Оформить оплату', new_top_up_url(home_id: home.id), 'fa-hand-holding-dollar' %> |
-                <%= clink_to 'Показать историю оплат', top_ups_url(home_id: home.id), 'fa-magnifying-glass-dollar' %> |
                 <%= clink_to 'Добавить гость', new_guest_info_url(booking_id: home.bookings.where(finished_at: nil).last.id), 'fa-user-plus' %>
+                <%= clink_to 'Закрыть комнату', close_home_path(home), 'fa-person-walking-luggage' %> |
               <% else %>
-                <%= clink_to 'Посмотреть', home, 'fa-search' %> |
                 <%= clink_to 'Открыть комнату', new_booking_path(home_id: home.id), 'fa-person-shelter' %>
               <% end %>
             </td>
