--- a/app/views/guest_infos/index.html.erb
+++ b/app/views/guest_infos/index.html.erb
@@ -1,30 +1,1 @@
-<div class="container my-5">
-  <div class="card shadow">
-    <div class="card-body">
-      <table class="table table-hover table-striped">
-        <thead>
-          <tr>
-            <th>Имя</th>
-            <th>Номер телефона</th>
-            <th>Возраст</th>
-            <th>Страна</th>
-            <th>Оформлено в</th>
-            <th colspan="3"></th>
-          </tr>
-        </thead>
-        <tbody>
-          <% @guest_infos.each do |guest_info| %>
-            <tr>
-              <td><%= guest_info.name %></td>
-              <td><%= guest_info.phone_number %></td>
-              <td><%= guest_info.age %></td>
-              <td><%= guest_info.country %></td>
-              <td><%= strf_datetime guest_info.created_at %></td>
-            </tr>
-          <% end %>
-        </tbody>
-      </table>
-      <%= paginate @guest_infos %>
-    </div>
-  </div>
-</div>
+<%= render 'guest_infos', guest_infos: @guest_infos %>
