everything is ready

--- a/app/views/expenditures/index.html.erb
+++ b/app/views/expenditures/index.html.erb
@@ -1,5 +1,6 @@
 <div class="container my-5">
   <div class="card shadow">
+    <%= render 'filter_form', q: @q, url: request.path %>
     <div class="card-header d-flex justify-content-between align-items-center">
       <h3 class="card-title font-weight-bold">Расходы</h3>
       <%= link_to 'Добавить новый', new_expenditure_path, class: "btn btn-success min-width-btn" %>
