--- a/app/views/top_ups/_top_ups.html.erb
+++ b/app/views/top_ups/_top_ups.html.erb
@@ -4,6 +4,7 @@
     <tr>
       <th>Имя</th>
       <th>Цена<br><%= num_to_usd total_price %> </th>
+      <th>Тип оплаты</th>
       <th>Оплата оформлено в</th>
       <th>гость пришел в</th>
       <th>Номер комнаты</th>
@@ -16,6 +17,7 @@
       <tr>
         <td><%= top_up.guest_info.name %></td>
         <td><%= num_to_usd top_up.price %></td>
+        <td><%= num_to_usd top_up.payment_type %></td>
         <td><%= strf_datetime top_up.created_at %></td>
         <td><%= strf_datetime top_up.guest_info.created_at %></td>
         <td><%= link_to top_up.booking.home.number, home_path(top_up.booking.home) %></td>
