--- a/app/views/top_ups/_form.html.erb
+++ b/app/views/top_ups/_form.html.erb
@@ -7,6 +7,7 @@
     <%= f.association :booking, as: :hidden %>
     <%= f.association :guest_info, label: 'Выберите гостя', collection: @guest_infos %>
     <%= f.input :price, label: 'цена' %>
+    <%= f.input :payment_type, label: 'Тип оплаты', collection: TopUp.payment_types.keys.map { |unit| [TopUp.human_attribute_name("unit.#{unit}"), unit] }, include_blank: false %>
     <%= f.input :comment, placeholder: 'Не обязательно' %>
     <%= f.input :created_at, label: 'Дата' %>
   </div>
