--- a/app/views/shifts/show.html.erb
+++ b/app/views/shifts/show.html.erb
@@ -6,8 +6,14 @@
         <th>Смену открыл: <%= @shift.user.name %></th>
         <th>Смена открыт в: <%= strf_datetime @shift.created_at %></th>
         <th>Смена закрылся в: <%= strf_datetime(@shift.closed_at) || 'Смена не закрылся!' %></th>
-        <th>Итого приход: <%= num_to_usd @shift.total_income || @shift.total_top_up %></th>
+        <th>
+          Итого приход: <%= num_to_usd @shift.total_income || @shift.total_top_up %><br>
+          <% TopUp.payment_types.each do |value, key| %>
+            <%= value.capitalize %>: <%= @shift.list_top_ups.where(payment_type: key).sum(:price) %><br>
+          <% end %>
+        </th>
         <th>Итого расход: <%= num_to_usd @shift.total_expenditure || @shift.calculate_total_expenditure %></th>
+        <th>Прибыль: <%= num_to_usd (@shift.total_income || @shift.total_top_up) - (@shift.total_expenditure || @shift.calculate_total_expenditure) %></th>
       </tr>
   </table>
   <br>
