--- a/app/views/shifts/show.html.erb
+++ b/app/views/shifts/show.html.erb
@@ -2,14 +2,14 @@
   <h4>Смена №<%= @shift.id %></h4><br>
   <table class='table table-bordered'>
     <thead>
-      <tr>
-        <th>Смену открыл: <%= @shift.user.name %></th>
-        <th>Смена открыт в: <%= strf_datetime @shift.created_at %></th>
-        <th>Смена закрылся в: <%= strf_datetime(@shift.closed_at) || 'Смена не закрылся!' %></th>
+      <tr class='d-flex align-items-center'>
+        <th>Смену открыл: <br><%= @shift.user.name %></th>
+        <th>Смена открыт в: <br><%= strf_datetime @shift.created_at %></th>
+        <th>Смена закрылся в:<br> <%= strf_datetime(@shift.closed_at) || 'Смена не закрылся!' %></th>
         <th>
           Итого приход: <%= num_to_usd @shift.total_income || @shift.total_top_up %><br>
           <% TopUp.payment_types.each do |value, key| %>
-            <%= value.capitalize %>: <%= @shift.list_top_ups.where(payment_type: key).sum(:price) %><br>
+            <%= value.capitalize %>: <%= num_to_usd @shift.list_top_ups.where(payment_type: key).sum(:price) %><br>
           <% end %>
         </th>
         <th>Итого расход: <%= num_to_usd @shift.total_expenditure || @shift.calculate_total_expenditure %></th>
@@ -20,7 +20,7 @@
   <div class='row'>
     <div class='col-sm-12'>
       <%= render 'top_ups/top_ups', top_ups: @shift.list_top_ups, total_price: @shift.total_top_up %>
-      <br><br><br>
+      <br><br>
     </div>
     <div class='col-sm-12'>
       <%= render 'expenditures/expenditures', expenditures: @shift.list_expenditures, total_price: @shift.total_expenditure %>
